--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -10,18 +10,17 @@
 
     <com.example.testflippageview.FlipVerticalPageLayout
         android:id="@+id/flip"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="match_parent"
+    	android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="18dp"
         android:layout_marginTop="70dp" >
 
         <ImageView
-           
             android:id="@+id/imageView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+    		android:layout_height="match_parent"
             android:src="@drawable/back" />
 
     </com.example.testflippageview.FlipVerticalPageLayout>
